# herdr-thread-to-tab

./: .gitignore  Cargo.toml  LICENSE  README.md  TOBE.md  herdr-plugin.toml
.github/workflows/: ci.yml  release.yml
scripts/: install-binary.sh  verify-glibc-baseline.sh  verify-release-assets.sh
src/: codex.rs  herdr.rs  lib.rs  main.rs  state.rs  title.rs
tests/: installer.sh  listener.rs  local-release-smoke.sh  release-assets.sh
