[package]
name = "thread-to-tab"
version = "0.1.0"
edition = "2021"
description = "Keep single-pane Herdr tab labels in sync with coding-agent titles"
license = "MIT"

[dependencies]
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"
